--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,6 @@
     --text-lg: 500 1.5/1rem var(--ff3);                             /* 16px */
     --text-md: 500 1.5/0.875rem var(--ff3);                         /* 14px */
     --text-sm: 500 1.5/0.75rem var(--ff3);                          /* 12px */
-    --label-md: 700 1.5/1.25rem var(--ff3);
-    --label-sm: 700 1.5/1rem var(--ff3);
+    --label-md: 700 1.5/1.25rem var(--ff3);                         /* 20px */
+    --label-sm: 700 1.5/1rem var(--ff3);                            /* 16px */
 }
